...
  };

  return (
    <>
      <TextInput
        ref={ref}
        testID="map.search.inline.input"
        value={draftQuery}
        onFocus={onFocus}
        onChangeText={updateDraft}
        placeholder="Search places or services"
        placeholderTextColor={placeholderTextColor}
        style={inputStyle}
...
